@@ -24,7 +24,6 @@
 typedef struct LookupPaths {
         char **unit_path;
 #ifdef HAVE_SYSV_COMPAT
-        char **sysvinit_path;
         char **sysvrcnd_path;
 #endif
 } LookupPaths;
